--- a/src/app/child1/child1.component.html
+++ b/src/app/child1/child1.component.html
@@ -21,3 +21,5 @@
 <div [ngClass]= "Changeevent? 'primary' :'secondary'" [ngStyle]= "{'font-size.px':24}">
     some text
 </div>
+
+<button (click) = "fireEvents()">Send to parent</button>
