--- a/src/app/product-create/product-create.component.html
+++ b/src/app/product-create/product-create.component.html
@@ -1,23 +1,44 @@
 <p>product-create works!</p>
 <div style="width: 500px; margin:auto">
     <div class="submit-form">
-        <div *ngIf = "!submitted">
+        <form name="form" (ngSubmit) = "f.form.valid && onSubmit()" #f="ngForm" novalidate>
             <div class="form-group">
                 <label for="name">Name</label>
-                <input type="text" class="form-control" id="name" required [(ngModel)] = "product.name" name="name">
+                <input type="text" class="form-control" required [(ngModel)] = "product.name" name="name"
+                [ngClass] = "{ 'is-valid' : f.submitted}">
+              
             </div>
-
+            <div class="form-group">
+                <label for="description"> Title</label>
+                <input type="text" class="form-control" id="title" required [(ngModel)] = "product.title" name="title">
+            </div>
             <div class="form-group">
                 <label for="description"> Description</label>
                 <input type="text" class="form-control" id="description" required [(ngModel)] = "product.description" name="description">
-            </div>
+                        </div>
 
-            <button (click) = "createProduct()" class="btn btn-success">Create</button>
-        </div>
+            <button type="submit" class="btn btn-success">Create</button>
+        
 
         <div *ngIf = "submitted">
             <h3>Data created successfully </h3>
             <button class="btn btn-success" (click) = "newProduct()">New</button>
         </div>
-    </div>
-</div>
+    
+<table>
+    <thead><b>Id</b>
+    <th>Name</th>
+    <th> Title</th>
+    <th>Description</th>
+    </thead>
+    <tbody>
+        <tr *ngFor = "let row of detail">
+            <td>{{row.id}}</td>
+            <td>{{row.name}}</td>
+            <td>{{row.title}}</td>
+            <td>{{row.description}}</td>
+        </tr>
+    </tbody>
+    
+
+</table>
