Save Data on CRUD

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
-<app-reactiveform></app-reactiveform>
+<h2>CRUD Operations</h2>
+<div class="navbar-nav mr-auto">
+    <li class="nav-item">
+        <a routerLink="customer" class="nav-link">customer</a>
+    </li>
+    </div>
+<router-outlet></router-outlet>
+
+
 <span>----------------------------------------------------------------------------------</span>
 <h1>Routing </h1>
 <a routerLink = "child1">Child1</a>
@@ -146,9 +154,10 @@ https://www.devglan.com/angular/angular-8-crud-example-->
 <br>
 
 <h4>Decimal</h4>
-{{5.123445 | number: '3.0-0'}}
+{{5.123445 | number: '3.0-0'}}005
 <br>
-{{5.123445 | number: '3.1-5'}}
+{{5.123445 | number: '3.4-5'}}
+//005.12345
 <br>
 
 <h4>Lowercase Pipe</h4>
