--- a/src/app/reactiveform/reactiveform.component.html
+++ b/src/app/reactiveform/reactiveform.component.html
@@ -31,8 +31,16 @@
                 </ng-container>
       </div>
       <div class="checkbox">
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-primary" routerLink="create">Submit</button>
       </div>
-    
     </form>
+    <table>
+        <thead>Name</thead>
+        <th>Roll No</th>
+        <th>Address</th>
+        <th>Skill</th>
+        <tbody>
+        </tbody>
+    </table>
 </div>
+<router-outlet></router-outlet>
