CRUD operation add and list customer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
     <li class="nav-item">
         <a routerLink="customer" class="nav-link">customer</a>
     </li>
-    </div>
-<router-outlet></router-outlet>
+</div>
+
 
 
 <span>----------------------------------------------------------------------------------</span>
@@ -12,7 +12,7 @@
 <a routerLink = "child1">Child1</a>
 <br><br>
 <a routerLink = "child2">Child2</a>
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
 
 
 <!-- 
@@ -261,7 +261,7 @@ https://www.devglan.com/angular/angular-8-crud-example-->
     </nav>
 
     <div class="container mt-5">
-        <router-outlet></router-outlet>
+        <!-- <router-outlet></router-outlet> -->
     </div>
 </div>
 
@@ -271,3 +271,5 @@ https://www.devglan.com/angular/angular-8-crud-example-->
     {{row.id}}
     {{row.name}}
 </div>
+
+<router-outlet></router-outlet>
