--- a/src/app/customer/customerform/customerform.component.html
+++ b/src/app/customer/customerform/customerform.component.html
@@ -6,7 +6,7 @@
   <div class="panel panel-primary">
     <div class="panel-heading">
       <div class="panel-body">
-    <form [formGroup]= "customerFormGroup">
+    <form [formGroup]= "customerFormGroup" >
         <div class="form-control">
         <label for="name">Name:</label>
         <input type="text" class="form-control" id="name"  name="email" formControlName="name" #name>
@@ -15,7 +15,7 @@
       <div class="form-control">
         <label for="pwd">Roll No:</label>
         <input  class="form-control" id="rollno"  name="rollno" formControlName="rollno" #rollno>
-        <span *ngIf="customerFormGroup.controls.rollno.valid">Only Digit is required</span>
+        <span *ngIf="customerFormGroup.controls.rollno">Only Digit is required</span>
       </div>
       <div class="form-control">
         <label for="pwd">Address:</label>
@@ -37,7 +37,8 @@
                 <span  class="help-block">All Field is Required</span>
       </div>
       <div class="checkbox">
-        <button type="submit" class="btn btn-success" (click)= "Save()">Save {{actionDetail.EDIT_ACTION}}</button>
+        <button type="submit" class="btn btn-success" (click)="onSave()">Save</button>
+        <span *ngIf = "isSubmitted"></span>
         <button type="submit" class="btn btn-danger" (click)= "getCustomer()">List</button>
       </div>
     </form>
@@ -54,7 +55,7 @@
     <th>Rollno</th>
     <th>Address</th>
     <th>Skill</th>
-    <th></th>
+    <th>EditDelete</th>
   </thead>
   <tbody>
     <tr *ngFor = "let item of customer" class="">
@@ -63,11 +64,16 @@
       <td>{{item.rollno}}</td>
       <td>{{item.address}}</td>
       <td>{{item.skill}}</td>
+      <td></td>
       <td>
-        <button class="btn-success" (click)="editCustomer()">Edit</button>
-        <button class="btn-danger" (click)="deleteCustomer(id)">Delete</button>
+        <button class="btn-success" (click)="getCustomerId(item.id)">Edit</button>
+        <button class="btn-danger" (click)="deleteCustomer(item.id)">Delete</button>
       </td>
     </tr>
   </tbody>
 </table>
 </div>
+
+
+
+<!-- {{actionDetail.EDIT_ACTION}} -->
