--- a/src/app/customer/customerform/customerform.component.html
+++ b/src/app/customer/customerform/customerform.component.html
@@ -9,17 +9,18 @@
     <form [formGroup]= "customerFormGroup" >
         <div class="form-control">
         <label for="name">Name:</label>
-        <input type="text" class="form-control" id="name"  name="email" formControlName="name" #name>
-        <span *ngIf="customerFormGroup.controls.name.touched && !customerFormGroup.controls.name.valid">This Field is required</span>
+        <input type="text" class="form-control" id="name"  name="email" formControlName="name" >
+        <span *ngIf="customerFormGroup.controls.name.touched && customerFormGroup.controls.name.valid">
+         Name is required</span>
       </div>
       <div class="form-control">
         <label for="pwd">Roll No:</label>
-        <input  class="form-control" id="rollno"  name="rollno" formControlName="rollno" #rollno>
-        <span *ngIf="customerFormGroup.controls.rollno">Only Digit is required</span>
+        <input  class="form-control" type="number" name="rollno" formControlName="rollno">
+        <!-- <span *ngIf="customerFormGroup.controls.rollno.value.number">Only Digit is required</span> -->
       </div>
       <div class="form-control">
         <label for="pwd">Address:</label>
-        <input type="text" class="form-control" id="address"  name="address" formControlName="address" #address>
+        <input type="text" class="form-control" id="address"  name="address" formControlName="address">
       </div>
       <div formArrayName="skill">
               <div class="form-label">Skill: </div> 
@@ -47,7 +48,7 @@
   </div>
 </div>
 </div>
-<div class="col-md-6">
+<div class="col-md-8">
 <table class="table table-striped">
   <thead>
     <th>SRNO</th>
@@ -55,7 +56,7 @@
     <th>Rollno</th>
     <th>Address</th>
     <th>Skill</th>
-    <th>EditDelete</th>
+    <th>EditDeleteOPeration</th>
   </thead>
   <tbody>
     <tr *ngFor = "let item of customer" class="">
@@ -63,7 +64,13 @@
       <td>{{item.name}}</td>
       <td>{{item.rollno}}</td>
       <td>{{item.address}}</td>
-      <td>{{item.skill}}</td>
+      <td>
+        <ng-container *ngFor= "let skillItem of item.skill">
+          {{skillItem.title1}},
+          {{skillItem.title2}}
+          
+        </ng-container>
+      </td>
       <td></td>
       <td>
         <button class="btn-success" (click)="getCustomerId(item.id)">Edit</button>
