Observable complete using map

--- a/src/app/exampleobserve/exampleobserve.component.html
+++ b/src/app/exampleobserve/exampleobserve.component.html
@@ -6,7 +6,8 @@
     </thead>
     <tbody>
         <tr *ngFor = "let row of display">
-            <td>{{row}}</td>
+            <td>{{row.name}}</td>
+            <td>{{row.email}}</td>
         </tr>
     </tbody>
 </table>
