observe example and switch map example

--- a/src/app/exampleobserve/exampleobserve.component.html
+++ b/src/app/exampleobserve/exampleobserve.component.html
@@ -1,4 +1,6 @@
-<h2>Observable Examples</h2>
+<h3>Observable Examples</h3>
+
+
 <table class="table table-striped">
     <thead>
         <th>Name</th>
@@ -11,4 +13,8 @@
         </tr>
     </tbody>
 </table>
+<h3>
+<p><b>Data coming {{message}}</b></p>
+</h3>
+
 
