--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,9 @@
             <li class="nav-item">
                 <a routerLink="observe" class="nav-link">ObserveExp</a>
             </li>
+            <li class="nav-item">
+                <a routerLink="examplerxjs" class="nav-link">Rxjs</a>
+            </li>   
         </div>
     </nav>
 
