In bank-detail add interest task

--- a/src/app/bank-details/bankdetail-container/bankdetail-container.component.html
+++ b/src/app/bank-details/bankdetail-container/bankdetail-container.component.html
@@ -1,4 +1,5 @@
 <app-bankdetail-presentation [accountbankDetail]="bankdetail$ | async"
 (add)="addBankDetail($event)"
 (update)="editBankDetail($event)"
+(getbankdetail)="getBankDetail"
 ></app-bankdetail-presentation>
