Searching & currency pipe in bank-details and example of elementreference and also use element ref with parent-child

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,9 +25,7 @@
             <li class="nav-item">
                 <a routerLink="examplerxjs" class="nav-link">Rxjs</a>
             </li>   
-            <!-- <li class="nav-item">
-                <a routerLink="examplemvp" class="nav-link">MVP Structure</a>
-            </li> -->
+           
             <li class="nav-item">
                 <a routerLink="employee-detail" class="nav-link">Employees</a>
             </li>  
@@ -36,6 +34,9 @@
             </li> 
             <li class="nav-item">
                 <a routerLink="Bank-Details" class="nav-link">Bank Detail</a>
+            </li>
+             <li class="nav-item">
+                <a routerLink="exampleDOMRender" class="nav-link">DOM Render Example</a>
             </li>
         </div>
     </nav>
