--- a/src/app/bank-details/bankdetail-container/bankdetail-container.component.html
+++ b/src/app/bank-details/bankdetail-container/bankdetail-container.component.html
@@ -2,4 +2,5 @@
 (add)="addBankDetail($event)"
 (update)="editBankDetail($event)"
 (getbankdetail)="getBankDetail"
+(delete) = "deleteBankDetail"
 ></app-bankdetail-presentation>
